samples/_failures_safe/1761400951_a740cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58ea0f3a.c: In function ‘main’:
./samples/SAFE/__tmp_58ea0f3a.c:123:12: error: missing terminating " character
  123 |     printf("\nMatrix Addition:\
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_58ea0f3a.c:123:5: error: expected expression at end of input
  123 |     printf("\nMatrix Addition:\
      |     ^~~~~~
./samples/SAFE/__tmp_58ea0f3a.c:123:5: error: expected declaration or statement at end of input
